Update welcome and notFound messages in properties
Signed-off-by: Pedrassa <49522692+Pedrassa@users.noreply.github.com>

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,6 +1,6 @@
-welcome=Welcome
+welcome=Welcome DHBW DevOps Class!
 required=is required
-notFound=has not been found - nao encontrado
+notFound=has not been found - nicht gefunden
 duplicate=is already in use
 nonNumeric=must be all numeric
 duplicateFormSubmission=Duplicate form submission is not allowed
