Update welcome message for Pet Clinic Application
Signed-off-by: Pedrassa <49522692+Pedrassa@users.noreply.github.com>

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome DHBW DevOps Class!
+welcome=Welcome to Pet Clinic Application on Production V.1.0
 required=is required
 notFound=has not been found - nicht gefunden
 duplicate=is already in use
